# vulnhuntr

./: .dockerignore  .gitignore  .vulnhuntr.example.yaml  AGENT.md  CHANGELOG.md  COPILOT_AGENT.md  Makefile  QUICKSTART.md  README.md  keploy.yml  pyproject.toml  pytest.ini  vulnhuntr.sh
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  keploy-test.yml  publish.yml  release.yml  semgrep.yml  test.yml  trivy.yml
docs/: ARCHITECTURE.md  AREAS_OF_IMPROVEMENT.md  COST_MANAGEMENT.md  INTEGRATIONS.md  MCP_SERVERS.md  MCP_SETUP.md  README.md  REPORTING.md  TECHNICAL_DOCUMENTATION.md  Vulnhuntr: Autonomous AI Finds First 0-Day Vulnerabilities in Wild.odt  openrouter-free-models.md
docs/agents/: README.md  dependency-management.md  git-workflow.md  logging.md  prompt-engineering.md  python.md
docs/agents/code-review/: SKILL.md
docs/development_path/: 01_cost_management.md  02_reporting_integration.md  03_multi_language_support.md  04_performance_optimization.md  05_false_positive_reduction.md  15_mcp_integration.md  README.md
docs/issues/: README.md
docs/issues/fixed/: 001-jedi-parso-python312-compat.md  002-python-syntax-in-json.md  003-poc-field-rejects-null.md  004-max-tokens-truncation.md  005-markdown-wrapped-json.md  006-debug-file-export.md
docs/issues/pending/: 001-repeated-context-requests.md  002-network-file-filtering.md
docs/issues/persistent/: 001-invalid-escape-sequences.md
docs/project/: ARCHITECTURE_REFACTOR.md  LITERATURE_REVIEW.md  MCP_ANALYSIS_SERVER_RECOMMENDATIONS.md  MCP_SERVERS.md  PROJECT_PROPOSAL.md  RESEARCH_METHODOLOGY.md
tests/: __init__.py  conftest.py  test_analysis.py  test_checkpoint.py  test_cli.py  test_config.py  test_cost_tracker.py  test_deep_analysis.py  test_integrations.py  test_llms.py  test_mcp_analysis.py  test_mcp_config.py  test_models.py  test_prompts.py  test_repo.py  test_reporters.py  test_symbol_finder.py  test_xml_models.py
tests/agent/: mcp.json
tests/agent/sub-agents/: logic-error.md  python-quality.md
vulnhuntr/: LLMs.py  __init__.py  __main__.py  __main__old.py  checkpoint.py  config.py  cost_tracker.py  llms.py  prompts.py  symbol_finder.py
vulnhuntr/cli/: __init__.py  output.py  parser.py  runner.py
vulnhuntr/core/: __init__.py  analysis.py  models.py  repo.py  xml_models.py
vulnhuntr/integrations/: __init__.py  github_issues.py  webhook.py
vulnhuntr/mcp/: __init__.py  analysis.py  client.py  config.py  example_config.yaml
vulnhuntr/reporters/: __init__.py  base.py  csv_reporter.py  html.py  json_reporter.py  markdown_reporter.py  sarif.py
